started implementing youtube videos

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,7 @@ $darkBG: #053043;
 @import 'partials/_custom-variables';
 @import 'vendors/bootstrap/_bootstrap-custom';
 @import 'vendors/_animate';
+@import 'partials/utils/_video';
 @import 'partials/_menu';
 @import 'partials/_footer';
 
