--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -111,7 +111,7 @@ article{
       margin-top: 0;
       /*min-height: 80px;
       border-right: 1px solid rgba(255,255,255,.3);*/
-      padding: 0 1.5625%;
+      padding: 0;
       &.inactive a {
         opacity:.35;
       }
@@ -121,9 +121,10 @@ article{
         font-size: 1.333em;
         text-decoration: none;
         height: 100%;
+        min-height:40px;
         position:relative;
         padding: 20px 0;
-        display:inline-block;
+        display:block;
         width: 100%;
       }
     }
