category page modules for category template designs home & A

--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -52,10 +52,10 @@ header{
       }
     }
     .results{
-      font-style:italic;
       font-size:1.5em; /* mobile size - desktop not available */
       padding:0;
       text-align:center;
+      color: #727272;
     }
     .tab-pane-content{
 
