--- a/app/styles/partials/category/_category-modules.scss
+++ b/app/styles/partials/category/_category-modules.scss
@@ -49,7 +49,7 @@ $catLink: #12b1c9;
     position: absolute;
     top: 20px;
     left: 0px;
-    width: 100%;
+    width: auto;
     z-index: 1;
     a, a:hover{
       padding: 20px 40px 20px 0;
