--- a/app/styles/partials/category/_category-modules.scss
+++ b/app/styles/partials/category/_category-modules.scss
@@ -46,7 +46,6 @@ $catLink: #12b1c9;
     text-transform: uppercase;
   }
   .type-cat{
-    position: absolute;
     top: 20px;
     left: 0px;
     width: auto;
@@ -59,7 +58,6 @@ $catLink: #12b1c9;
   }
   .pos{
     position:absolute;
-
   }
   .pos.bottom{
     bottom: 15%;
@@ -278,7 +276,55 @@ $catLink: #12b1c9;
 @media screen and (max-width: 767px) {
   .module{
     height: auto;
-    padding: 40px 0;
+    overflow:hidden;
+    padding: 0 0 25px;
+    margin-right:8px;
+    margin-left:8px;
+    &.col1-halfbg{
+      padding-bottom:0;
+    }
+    &.col2,
+    &.con1{
+      float:none;
+      display:block;
+      width:auto;
+      margin-right:8px;
+      margin-left:8px;
+      .type-cat{
+        position:relative;
+        z-index:5;
+        top:0;
+        left:5%;
+      }
+    }
+    &.col1-fullbg{
+      // padding:25% 0;
+    }
+    &.halfheight{
+      .half{
+        width:100%;
+        height:100%;
+        padding:0;
+        margin-bottom:-135px;
+        h3{
+          position:relative;
+          z-index:5;
+          color:#FFF;
+          margin-left:10%;
+          margin-right:10%;
+        }
+        p{
+          position:relative;
+          top:-135px;
+          margin-left:10%;
+          margin-right:10%;
+        }
+        .halfheight-bg{
+          position:relative;
+          top:-135px;
+        }
+      }
+    }
     .table{
       display: block;
       width: 100%;
@@ -287,13 +333,55 @@ $catLink: #12b1c9;
     .vertical-wrap{
       display:block;
     }
+    .white{
+      color:$catHeaderLight;
+    }
+    h3,
+    h3.big{
+      font-size:3em;
+    }
+    p.small{
+      font-size:1.5em;
+    }
     .vert{
       height: auto;
     }
+    .pos{
+      position:static;
+    }
+    .type-cat{
+      a{
+        display:inline-block;
+        margin-bottom:20px;
+        font-size:1.5em;
+      }
+    }
+    blockquote{
+      font-size:3.750em;
+    }
+    .quote-cite{
+      font-size:0.800em;
+    }
   }
 
+  .col1-halfbg.example2 .col-sm-6.bg.mobil-video-image-example{
+    background-image:none;
+    position:relative;
+    padding:0;
+    .video-bg-img{
+      width:100%;
+      height:auto;
+    }
+    .table{
+      position:absolute;
+      top:50%;
+      left:50%;
+      width:auto;
+      margin:-60px auto auto -60px;
+    }
+  }
 
-  .col2{
+  /*.col2{
     width: 100%;
     .col-xs-12{
       padding: 0 1.5625%;
@@ -310,6 +398,6 @@ $catLink: #12b1c9;
   }
   .col2.right{
     margin-left: 0;
-  }
+  }*/
 
 }
