updated headers, tablet and mobile styles

--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -58,7 +58,7 @@ header{
 .search-overlay,
 .menu-overlay{
   display:none;
-  position:absolute;
+  position:fixed;
   top: 0;
   width: 100%;
   min-height: 100%;
