--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -12,6 +12,7 @@ body {
   position:absolute;
   width: 100%;
   height: 100%;
+  background: #125555; // IE9 and IE8 fall back
   background: -webkit-linear-gradient(right top, rgba(43,71,92,1),rgba(72,146,131,1));
   background: -moz-linear-gradient(bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
   background: linear-gradient(to bottom left, rgba(43,71,92,1),rgba(72,146,131,1));
@@ -50,6 +51,8 @@ article{
   background-size: cover;
   //hover transition state
   a{
+    filter: alpha(opacity=50);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     -webkit-transition: opacity .5s ease-in-out;
     -moz-transition: opacity .5s ease-in-out;
     -o-transition: opacity .5s ease-in-out;
@@ -58,7 +61,8 @@ article{
   }
   a:hover{
     zoom: 1;
-    filter: alpha(opacity=1);
+    filter: alpha(opacity=100);
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     opacity: 1;
     color: $homeLinkOnColor;
   }
@@ -113,11 +117,16 @@ article{
       border-right: 1px solid rgba(255,255,255,.3);*/
       padding: 0;
       &.inactive a {
+        filter: alpha(opacity=35);
+        -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=35)";
         opacity:.35;
       }
       a, a:hover{
         z-index:5;
         color: $homeLinkColor;
+        filter: alpha(opacity=100);
+        -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+        opacity: 1;
         font-size: 1.333em;
         text-decoration: none;
         height: 100%;
@@ -178,7 +187,7 @@ article{
       }
       #home-area{
         position:static;
-        height: auto;
+        height: 100%;
         width: 100%;
         background: none;
       }
@@ -188,6 +197,15 @@ article{
         height: auto;
         width: 100%;
         padding: 50px 0;
+        background-size:auto 80%;
+        background-position:center center;
+        background-repeat:no-repeat;
+        .row{
+          position:static;
+          .headline{
+            position:static;
+          }
+        }
         h1, h2{
           font-size: 3.5em;
           font-weight: normal;
@@ -227,12 +245,7 @@ article{
       article.welcome#welcome{
         background: none;
       }
-      article
-      {
-        background-size:auto 80%;
-        background-position:center center;
-        background-repeat:no-repeat;
-      }
+
       article.category-1{
         min-height:228px;
         /*background-image: url('../images/home/mobile/bg-global-ecommerce.png');*/
@@ -251,6 +264,9 @@ article{
       article.category-5{
         min-height:233px;
         /*background-image: url('../images/home/mobile/bg-global-ecommerce.png');*/
+      }
+      footer{
+          padding:0;
       }
   }
 }
