--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -172,7 +172,7 @@ article{
 
 }
 
-@media screen and (min-width: 768px) and (max-width: 1024px){
+@media screen and (max-width: 1024px){
   .touch{
     .visible-xs.group{
       display: block !important;
