--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -210,6 +210,9 @@ article{
           font-size: 3.5em;
           font-weight: normal;
           margin-bottom:15px;
+          a,a:hover{
+            color: $homeLinkColor;
+          }
         }
         p.larger{
           font-size: 2.375em;
