--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -84,10 +84,14 @@ header{
 @media screen and (min-width: 768px) and (max-width: 1023px){
   body{
     font-size: 10px;
+
+  }
+  .container-fluid{
+    max-width: 100%;
   }
 }
 
-@media (max-width: 768px){
+@media (max-width: 767px){
   body{
     font-size: 8px;
   }
