--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -1,5 +1,7 @@
 footer{
-  /*padding: 95px 0 0 0;*/
+  .container-fluid{
+    padding: 95px 0 0 0;
+  }
   background: $darkBG;
   color: #FFF;
   .link-group{
