--- a/app/styles/partials/category/_category-modules.scss
+++ b/app/styles/partials/category/_category-modules.scss
@@ -289,10 +289,20 @@ $catLink: #12b1c9;
       padding: 0 0 25px;
       margin-right:8px;
       margin-left:8px;
+      .cat-techlinks{
+        bottom: 0;
+      }
+      .type-cat{
+        a{
+          padding-top: 10px;
+          padding-bottom: 10px;
+        }
+      }
       &.darkbg{
-        min-height: 400px;
+        /*min-height: 400px;*/
         .table{
-          min-height:400px;
+          /*min-height:400px;*/
+          display:block;
         }
         .cat-techlinks{
           a{
@@ -427,6 +437,9 @@ $catLink: #12b1c9;
 
     .col1-fullbg{
       padding:0 5%;
+      .table{
+        padding: 50px 0 60px;
+      }
       .col-xs-11{
         padding:0;
       }
