added footer to home page. Added gutters to category page on small screens

--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -48,6 +48,8 @@ header{
       }
     }
     .tab-pane-content{
+      width: 96.875%;
+      margin: 0 auto;
       padding-top:20px;
       .content-type-title{
         display:inline-block;
