--- a/app/styles/partials/category/_category-modules.scss
+++ b/app/styles/partials/category/_category-modules.scss
@@ -218,7 +218,7 @@ $catLink: #12b1c9;
   background-size: cover;
   background-repeat:no-repeat;
   .type-cat{
-    left: 20px;
+    padding-left: 20px;
   }
   > .col-xs-12{
     padding: 0;
