--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -7,7 +7,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  /*overflow-y:;*/
+  overflow-y:scroll;
 }
 #home-area{
   position:absolute;
@@ -36,7 +36,11 @@ article {
     width: 100%;
     height: 100%;
 }
-
+footer {
+  position: absolute;
+  top: 100%;
+  width: 100%;
+}
 article.welcome{
   -webkit-transition: background-color 1s ease;
   -moz-transition: background-color 1s ease;
