--- a/app/styles/partials/utils/_video.scss
+++ b/app/styles/partials/utils/_video.scss
@@ -4,8 +4,22 @@
   padding-top: 25px;
   height: 0;
   .video-still{
-    width:100%;
-    height:auto;
+    position:absolute;
+    top:25px;
+    left:$gutterWidth;
+    padding:0 $gutterWidth;
+    /*width:100%;
+    height:auto;*/
+  }
+  /*where else are the styles for this */
+  .video-play{
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin:-60px 0 0 -60px;
+    width:112px;
+    height:112px;
+    background-image: url('../images/sprite/icn-play-circle.png');
   }
   iframe{
     width:100%;
