tweaked long form content styles desktop/mobile - moved hero styles out to separate file

--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -15,6 +15,9 @@ header{
   .logo{
     padding-top: 15px;
     padding-bottom: 15px;
+    a{
+      float:left;
+    }
   }
   ul{
     list-style-type: none;
