--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -3,6 +3,7 @@ $contentTypeTitleTextColor:#FFF;
 $contentContentText:#053043;
 
 @import 'partials/category/_category-modules.scss';
+@import 'partials/utils/_hero.scss';
 
 header{
   background: rgba(43,75,84,.9);
@@ -13,17 +14,6 @@ header{
   }
 }
 .main-content{
-  .hero-wrapper{
-    background-image: url('../images/home/bg-location-intelligence.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    position:relative;
-    .headline{
-      text-align:center;
-      padding-top: 150px;
-      padding-bottom: 150px;
-    }
-  }
   .page-container{
     position:relative;
   }
