--- a/app/styles/content.scss
+++ b/app/styles/content.scss
@@ -1,12 +1,16 @@
+@import 'partials/utils/_hero.scss';
+
+$mediumGray: #888888;
+
 .long-form-content{
   text-align:center;
 
-  // move these styles out to global
   .hero{
     padding:150px 0;
   }
   .main-content{
     .hero-wrapper{
+      background-image: url('../images/long-form-content/content-peugeot-citroen.jpg');
       .headline{
         padding:0; // moved to hero
         h1{
@@ -15,7 +19,6 @@
       }
     }
   }
-  // move hero styles ======================
 
   .social-container{
     list-style:none;
@@ -133,6 +136,9 @@
   blockquote{
     font-size:2.5em;
     font-style:italic;
+    +p{
+      clear:both;
+    }
   }
 
   .bold{
@@ -208,8 +214,9 @@
         font-size:1.167em;
         text-transform:uppercase;
         padding:10px 0;
+        color:$mediumGray;
         + a{
-            border-left:1px solid #000;
+            border-left:1px solid $mediumGray;
             padding-left:10px;
             margin-left:10px;
         }
@@ -238,9 +245,13 @@
         }
       }
     }
+
     .benefit{
-      margin-top:25px;
-      margin-bottom:25px;
+      float:none;
+      margin:50px auto;
+      p{
+        max-width:100%;
+      }
     }
 
     .top-benefits,
@@ -248,6 +259,16 @@
     .copy-section,
     .more-section{
       padding:25px 0;
+    }
+
+    .title-bg-detail{
+      h2{
+          font-size:3.125em;
+          padding:0 10px
+      }
+    }
+    .quote{
+      margin-bottom:45px;
     }
   }
 }
