--- a/app/styles/category.scss
+++ b/app/styles/category.scss
@@ -47,7 +47,13 @@ header{
         top: 60px;
       }
     }
-
+    .tabs-placehold{
+      display:none;
+      &.fixed{
+        display:block;
+        position:relative;
+      }
+    }
     .tab{
       text-align:center;
       a{
@@ -97,7 +103,7 @@ header{
 
 @media (max-width: 767px){
   body{
-    font-size: 8px;
+    font-size: 10px;
   }
   .main-content{
 
