--- a/app/styles/partials/category/_category-modules.scss
+++ b/app/styles/partials/category/_category-modules.scss
@@ -29,6 +29,9 @@ $catLink: #12b1c9;
   h3.big{
     font-size: 3em;
   }
+  h3.black{
+    color: #000;
+  }
   p{
     font-size: 1.5em;
     color:$contentContentText;
@@ -310,11 +313,14 @@ $catLink: #12b1c9;
       position:relative;
       height:auto;
       overflow:hidden;
-      padding: 0 0 25px;
+      padding: 0;
       margin-right:8px;
       margin-left:8px;
       .cat-techlinks{
         bottom: 0;
+      }
+      .vertical-wrap{
+        display:block;
       }
       .type-cat{
         a{
@@ -352,7 +358,7 @@ $catLink: #12b1c9;
         .blue-box{
           background: #12b1c9;
           margin-left: 0;
-          padding: 10px;
+          padding: 5px 10px;
           margin-top: 5px;
           display:inline-block;
           a{
@@ -405,9 +411,13 @@ $catLink: #12b1c9;
           min-height: 100px;
           height: auto;
         }
+        .cat-techlinks{
+          padding: 0 5%;
+        }
         .col2-content{
           padding:25px 5%;
           display:inline-block;
+          width: 90%;
           h3{
             margin-bottom:15px;
           }
@@ -445,7 +455,8 @@ $catLink: #12b1c9;
         position:static;
       }
       .pos.bottom.left{
-        position:absolute;
+        position:static;
+        padding-top: 90px;
       }
       /* used to make sure video images are big enough */
       .vert{
@@ -492,7 +503,7 @@ $catLink: #12b1c9;
       .table{
         padding: 50px 0 60px;
       }
-      .col-xs-11{
+      .col-xs-1x  1{
         padding:0;
       }
       .type-cat{
@@ -520,8 +531,8 @@ $catLink: #12b1c9;
     }*/
 
     //JUST USING THESE BG STYLES FOR STATIC PROTOTYPE -- WILL HAVE TO RECONFIGURE FOR AUTHORING IN CQ
-    .col2.bgexample1{
-      background-image: url('../images/category-template/mobile/col2-bg-fullwidth1.jpg');
+    .col2.bgexample1, .col1-fullbg{
+      background-image: url('../images/category-template/mobile/col1-bg-fullwidth.jpg');
     }
     .col2.bgexample2{
       background-image: url('../images/category-template/mobile/col2-bg-fullwidth3.jpg');
@@ -536,7 +547,7 @@ $catLink: #12b1c9;
       background-image: url('../images/category-template/mobile/col2-bg-halfheight2.jpg');
     }
     .halfheight-bg.example2{
-      background-image: url('../images/category-template/mobile/col2-bg-halfheight3.jpg');
+      //background-image: url('../images/category-template/mobile/col1-bg-halfwidth.jpg');
     }
 
   }
