implemented video on category all page

--- a/app/styles/partials/utils/_video.scss
+++ b/app/styles/partials/utils/_video.scss
@@ -1,18 +1,22 @@
+.module.no-padding,
+.video-container.no-padding{
+  padding:0;
+}
 .video-container{
   position: relative;
-  padding-bottom: 27%;
+  /*padding-bottom: 27%;
   padding-top: 25px;
-  height: 0;
-  .video-still{
+  height: 0;*/
+  width:auto;
+  height:100%;
+  /*.video-still{
     position:absolute;
     top:25px;
     left:$gutterWidth;
     padding:0 $gutterWidth;
-    /*width:100%;
-    height:auto;*/
-  }
+  }*/
   /*where else are the styles for this */
-  .video-play{
+  /*.video-play{
     position:absolute;
     top:50%;
     left:50%;
@@ -20,6 +24,10 @@
     width:112px;
     height:112px;
     background-image: url('../images/sprite/icn-play-circle.png');
+  }*/
+  &.video-half{
+    width:50%;
+    padding:0;
   }
   iframe{
     width:100%;
