--- a/app/styles/content.scss
+++ b/app/styles/content.scss
@@ -1,6 +1,7 @@
 @import 'partials/utils/_hero.scss';
 
 $mediumGray: #888888;
+$lightGray: #cccccc;
 
 .long-form-content{
   text-align:center;
@@ -116,9 +117,9 @@ $mediumGray: #888888;
 
   .title-bg-detail{
     margin-bottom:40px;
-    background-image: url('../images/title-bg-detail.jpg');
+    /*background-image: url('../images/title-bg-detail.jpg');
     background-repeat:repeat-x;
-    background-position:center center;
+    background-position:center center;*/
 
     h2{
       display:inline-block;
@@ -163,6 +164,16 @@ $mediumGray: #888888;
 
 
   .tech-used{
+    border:1px solid $lightGray;
+
+    .title-bg-detail{
+      margin-top:-66px;
+
+      h2{
+        font-size:2em;
+      }
+    }
+
     h3{
       font-size:2.5em;
       margin:1em auto 0;
@@ -173,14 +184,19 @@ $mediumGray: #888888;
   }
 
   .top-benefits{
+
     h3{
       text-transform:uppercase;
       font-size:2em;
     }
-    p{
-      max-width:170px;
-      margin-left:auto;
-      margin-right:auto;
+    .benefit{
+      margin-top:70px;
+
+      p{
+        max-width:170px;
+        margin-left:auto;
+        margin-right:auto;
+      }
     }
   }
 
